hphp/test/zend/good/tests/classes/type_hinting_001.php.expectf

Catchable fatal error: Argument 1 passed to FooBar::a() must implement interface Foo, Blort given in %s/type_hinting_001.php on line 27
